--- a/Docker/nginx/default.conf
+++ b/Docker/nginx/default.conf
@@ -44,12 +44,24 @@ server {
 }
 
 server {
-    listen 8443;
+    listen 8443 ssl http2;
     server_name todo;
     index index.php index.html;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
     root /var/www/laravel/public;
+
+    # SSL Configuration
+    ssl_certificate /etc/letsencrypt/live/todo/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/todo/privkey.pem;
+    
+    # SSL Security Settings
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers off;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
+    ssl_session_cache shared:SSL:50m;
+    ssl_session_timeout 1d;
+    ssl_session_tickets off;
 
     # Frontend - Next.js
     location / {
@@ -61,7 +73,7 @@ server {
         proxy_cache_bypass $http_upgrade;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Proto https;
     }
 
     # Backend API
@@ -74,6 +86,7 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root/index.php;
         fastcgi_param PATH_INFO $fastcgi_path_info;
         fastcgi_param REQUEST_URI $request_uri;
+        fastcgi_param HTTPS on;
     }
 
     # PHP files
@@ -85,5 +98,6 @@ server {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_param HTTPS on;
     }
 } 
